# respeaker_array

./: .gitignore  82-respeaker_array.rules  README.md  respeaker_array.service  respeaker_mic.service  respeaker_storage.service
src/respeaker_msgs/: CMakeLists.txt  package.xml
src/respeaker_msgs/msg/: AudioBuffer.msg
src/respeaker_node/: package.xml  setup.cfg  setup.py
src/respeaker_node/launch/: respeaker_array.launch.py
src/respeaker_node/respeaker_node/: audio_storage.py  respeaker_node.py
