<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>respeaker_node</name>
  <version>1.0.0</version>
  <description>ROS2 node for audio recording</description>
  <maintainer email="kide.vuojarvi@unikie.com">Kide Vuojärvi</maintainer>
  <license>BDS</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>respeaker_msgs</exec_depend>
  <exec_depend>px4_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>
  <exec_depend>python3-usb</exec_depend>
  <exec_depend>python3-tensorflow-pip</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
